fix: Enter key in Career, professor dropdown click, admin enrollment flow